# kotomka

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  codex_subscription_provider_reference.py  pyproject.toml
launchd/: dev.kotomka.plist
src/kotomka/: app.py  cli.py  config.py  media.py  models.py  ocr.py  pdf.py  reporting.py  source.py  storage.py  transcripts.py  utils.py  worker.py
src/kotomka/providers/llm/: __init__.py  base.py  codex_subscription.py  fake.py  json_base.py  json_helpers.py  openai_responses.py  prompts.py  registry.py
src/kotomka/providers/stt/: __init__.py  assemblyai.py  base.py  fake.py  keyterms.py  registry.py  whisper_local.py
src/kotomka/static/: app.css
src/kotomka/templates/: base.html  index.html  jobs.html  report.html  status.html
tests/: test_app.py  test_assemblyai.py  test_citations.py  test_frame_dedupe.py  test_frame_selection.py  test_llm_base.py  test_media_frames.py  test_models.py  test_ocr.py  test_pdf.py  test_pipeline_fake.py  test_registry.py  test_reporting.py  test_source.py  test_storage.py  test_transcripts.py  test_utils.py
