[project]
name = "kotomka"
version = "0.1.0"
description = "Local video-to-web-presentation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.14.2",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.91.0",
  "pillow>=12.3.0",
  "imagehash>=4.3.1",
  "playwright>=1.45.0",
  "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
]
ocr = [
  "ocrmac>=1.0 ; platform_system == 'Darwin'",
]
whisper = [
  "faster-whisper>=1.1",
]

[project.scripts]
kotomka = "kotomka.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kotomka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
